# WC

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  __init__.py  analysis_view.py  app.py  bet_card.py  casual_warnings.py  context_cards.py  context_loader.py  data_loader.py  prediction_card.py  session_state.py  styles.py  team_resolution.py  text_format.py  ux_presenters.py
data/: team_identity.json
docs/: goal_model_research.md
reports/: README.txt  backtest_results.json  backtest_results.md  blend_grid.json  bootstrap.json  calibration.json  common_sample_predictions.csv  experiment_log.txt  experiment_summary.json  final_goal_model_report.md  first_half_report.md  focused_experiment_log.txt  goal_model_data_audit.json  goal_model_data_audit.md  model_comparison.json  robustness_analysis.json  status.txt  subgroup_analysis.json
scripts/: audit_5_matchups.py  audit_goal_model_data.py  blend_backtest.py  build_goal_model_artifact.py  calibration_run.py  compute_elo60_goal40_blocks.py  eval_3_matches.py  expanded_audit.py  fetch_elo_ratings.py  fetch_historical_wc.py  fetch_live_2026.py  parse_international.py  pi_backtest_with_intl.py  run_backtest.py  run_bootstrap_fast.py  run_comparison.py  run_dashboard.sh  run_experiments.py  run_focused_experiments.py  run_second_half_experiments.py  smoke_test_today.py  validate_team_identity.py  verify_runtime_data.py  walk_forward.py
soccer_ev_model/: api_client.py  backtest.py  blend_fallback.py  confidence.py  elo_ratings.py  ev_workflow.py  features.py  fetch_data.py  goal_model.py  no_vig.py  (+14 more)
(+72 files in other folders)
