[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-ev-model-lab"
version = "0.1.0"
description = "Local-first World Cup soccer outcome probability model (no EV math)"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
phase2 = [
  "catboost>=1.2",
  "xgboost>=2.0",
  "scikit-learn>=1.3",
]
dashboard = [
  "streamlit>=1.30",
]
# Combined install: `pip install -e ".[all]"`
all = [
  "catboost>=1.2",
  "xgboost>=2.0",
  "scikit-learn>=1.3",
  "streamlit>=1.30",
]

[tool.setuptools]
packages = ["soccer_ev_model"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
